[package]
name = "visitorcount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.0.11" }
image = { version = "0.24.7", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false }
rusttype = "0.9.3"
url = "2.4.1"
console_error_panic_hook = "0.1.7"
